--- a/css project/style.css
+++ b/css project/style.css
@@ -207,12 +207,111 @@ section article h3 {
 .imgstars img{
     margin-right: 10px;
 }
+.contact-info {
+    margin-top: 30px;
+}
+.contact-info article {
+    width: 25%;
+    color: white;
+    height: 180px;
+    float: left;
+    text-align: center;
+    font-size: 15px;
+    padding-top: 20px;
+}
+.contact-info h3 {
+    color: white;
+    font-weight: 300;
+}
 
+#art-one {
+    background-color: rgb(76, 228, 121);
+}
+#art-two {
+    background-color: rgb(238, 68, 147);
+}
+#art-three {
+    background-color: rgb(82, 82, 226);
+}
+#art-four {
+    background-color: rgb(100, 206, 241);
+}
+#art-two i {
+    margin: 7px;
+}
+#art-four img {  
+    height: 100%;
+}
 
-
-
-
-
+input {
+    height: 50px;
+    width: 33%;
+}
+textarea {
+    width: 960px;
+    margin: 20px auto;
+    display: block;
+}
+#input {
+    width: 960px;
+    margin: 20px auto;
+    display: block;
+}
+#submit {
+    height: 40px;
+    width: 120px;
+    color: white;
+    background-color: rgb(228, 96, 20)
+}
+footer {
+    width: 100%;
+    background-color: black;
+}
+.foot {
+    text-align: center;
+    width: 100%;
+    height: 120px;
+    padding-top: 30px;
+}
+footer ul {
+    padding-top: 30px;
+    display: inline-block;
+}
+footer ul li {
+    list-style-type: none;
+    float: left;
+    padding-right: 10px;
+    font-size: 12px;
+    color: white;
+    font-family: 'Roboto';
+}
+footer p {
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    padding-bottom: 30px;
+}
+.cf::before,
+.cf::after {
+    display: table;
+    content: "";
+}
+.cf::after {
+    clear: both;
+}
+@media only screen and (min-width) and (max-width: 991px) {
+    div {
+        width: 100%;
+        max-width: initial;
+        margin: 0 auto;
+    }
+    header {
+        background-image: url(./images/banner3.jpg);
+        background-size: cover;
+        height: 900px;
+    }
+    
+}
 
 
 
