--- a/Project-Web-Design/css/main.css
+++ b/Project-Web-Design/css/main.css
@@ -111,12 +111,35 @@
     height: 50px;
     border-radius: 12px;
     background-color: #f7750a;
-    color: white; }
+    color: white;
+    margin-left: 30px; }
   .subscribe-buttons input {
     width: 500px;
     height: 50px;
     border: 1px solid gray;
     border-radius: 12px;
     padding-left: 30px; }
+
+/*OUR WORKS */
+.our_works {
+  width: 100%; }
+
+.ourWorksHeadline {
+  width: 50%;
+  margin: 100px auto;
+  text-align: center; }
+  .ourWorksHeadline h5 {
+    font-size: 35px; }
+  .ourWorksHeadline span {
+    color: #f7750a; }
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center; }
+  .portfolio img {
+    margin: 1%;
+    width: 27%; }
 
 /*# sourceMappingURL=main.css.map */
