--- a/Project-Web-Design/scss/main.scss
+++ b/Project-Web-Design/scss/main.scss
@@ -146,6 +146,7 @@
 
 .our_works {
   width: 100%;
+  
 
 }
 .ourWorksHeadline {
@@ -169,4 +170,58 @@
     margin: 1%;
     width: 27%;
   }
+}
+
+  .ourButton {
+  background-color: none;
+  color: black;
+  border: 1px solid rgb(194, 183, 183);
+  border-radius: 12px;
+  width: 200px;
+  height: 50px;
+  margin: 60px auto;
+  display: block;
+  font-weight: 500;
+  }
+  /* QUOTE */
+ 
+  .quotation {
+    background-image: url(../img/testimonials-background.jpg);
+    background-size: stretch;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .wrapQuote {
+      width: 70%;
+      margin: 100px auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .arrows {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+      }
+    }
+
+    h5 {
+      color: white;
+      font-style: italic;
+      font-size: 24px;
+      text-align: center;
+    }
+    p {
+      color: white;
+      text-align: center;
+    }
+  }
+/* our team */ 
+
+.our-team {
+  width: 100%;
+  display: flex;
+  justify-content: 
 }
