--- a/Project-Web-Design/css/main.css
+++ b/Project-Web-Design/css/main.css
@@ -1,53 +1,190 @@
-/*
-Error: Invalid CSS after "  justify-content:": expected expression (e.g. 1px, bold), was "}"
-        on line 227 of scss/main.scss
+* {
+  box-sizing: border-box; }
 
-222: 
-223: .our-team {
-224:   width: 100%;
-225:   display: flex;
-226:   justify-content: 
-227: }
+/*     HEADER */
+.header {
+  position: relative;
+  width: 100%; }
+  .header #main_image {
+    width: 100%; }
 
-Backtrace:
-scss/main.scss:227
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1308:in `expected'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/lexer.rb:240:in `expected!'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/parser.rb:855:in `assert_expr'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/script/parser.rb:68:in `parse'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1164:in `sass_script'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1002:in `value!'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:807:in `block in try_declaration'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1284:in `rethrow'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:820:in `try_declaration'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:743:in `declaration_or_ruleset'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:708:in `block_child'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:700:in `block_contents'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:689:in `block'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:681:in `ruleset'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:707:in `block_child'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:700:in `block_contents'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:137:in `stylesheet'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:41:in `parse'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/engine.rb:414:in `_to_tree'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/engine.rb:307:in `render_with_sourcemap'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `each'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:320:in `block in watch'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
-C:/Ruby26/lib/ruby/gems/2.6.0/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"  justify-content:\": expected expression (e.g. 1px, bold), was \"}\"\A         on line 227 of scss/main.scss\A \A 222: \A 223: .our-team {\A 224:   width: 100%;\A 225:   display: flex;\A 226:   justify-content: \A 227: }"; }
+.nav-bar {
+  position: absolute;
+  top: 15px;
+  width: 100%; }
+  .nav-bar .navbar_wrap {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between; }
+  .nav-bar span {
+    color: #f7750a; }
+  .nav-bar h4 {
+    color: white; }
+  .nav-bar p {
+    color: white; }
+
+.headline {
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .headline img {
+    margin-top: 150px; }
+  .headline h1 {
+    font-size: 70px;
+    font-weight: bolder; }
+    .headline h1 span {
+      color: #f7750a; }
+  .headline p {
+    font-size: 24px;
+    width: 60%;
+    text-align: center; }
+  .headline button {
+    background-color: none;
+    color: white;
+    border: 1px solid gray;
+    border-radius: 12px;
+    width: 200px;
+    height: 50px;
+    padding: 5px;
+    margin: 10px; }
+  .headline button:hover {
+    background-color: #f7750a;
+    color: white;
+    cursor: pointer; }
+
+.button-flex {
+  margin-top: 4%; }
+
+/*   DESIGN */
+.main {
+  width: 100%; }
+
+.main-flex {
+  width: 60%;
+  margin: 100px auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-align: center; }
+
+.icons {
+  width: 150px;
+  height: 150px;
+  border: 1px solid gray;
+  border-radius: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.design-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; }
+  .design-flex h5 {
+    margin: 30px auto; }
+  .design-flex p {
+    width: 55%; }
+
+/* SUBSCRIBE */
+.subscribe {
+  width: 100%;
+  background-image: url(../img/newsletter-background.jpg);
+  height: 250px; }
+
+.subscribe-buttons {
+  width: 50%;
+  height: 250px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: auto;
+  align-items: center; }
+  .subscribe-buttons button {
+    width: 250px;
+    height: 50px;
+    border-radius: 12px;
+    background-color: #f7750a;
+    color: white;
+    margin-left: 30px; }
+  .subscribe-buttons input {
+    width: 500px;
+    height: 50px;
+    border: 1px solid gray;
+    border-radius: 12px;
+    padding-left: 30px; }
+
+/*OUR WORKS */
+.our_works {
+  width: 100%; }
+
+.ourWorksHeadline {
+  width: 50%;
+  margin: 100px auto;
+  text-align: center; }
+  .ourWorksHeadline h5 {
+    font-size: 35px; }
+  .ourWorksHeadline span {
+    color: #f7750a; }
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center; }
+  .portfolio img {
+    margin: 1%;
+    width: 27%; }
+
+.ourButton {
+  background-color: none;
+  color: black;
+  border: 1px solid #c2b7b7;
+  border-radius: 12px;
+  width: 200px;
+  height: 50px;
+  margin: 60px auto;
+  display: block;
+  font-weight: 500; }
+
+/* QUOTE */
+.quotation {
+  background-image: url(../img/testimonials-background.jpg);
+  background-size: stretch;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .quotation .wrapQuote {
+    width: 70%;
+    margin: 100px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .quotation .wrapQuote .arrows {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%; }
+  .quotation h5 {
+    color: white;
+    font-style: italic;
+    font-size: 24px;
+    text-align: center; }
+  .quotation p {
+    color: white;
+    text-align: center; }
+
+/* our team */
+.our-team {
+  width: 100%;
+  display: flex; }
+
+/*# sourceMappingURL=main.css.map */
