--- a/AJAX/jQuery_AJAX/style.css
+++ b/AJAX/jQuery_AJAX/style.css
@@ -5,11 +5,43 @@
   margin: auto;
   align-items: center;
 }
+
 input {
   height: 40px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
+
 form {
   font-size: 21px;
   font-weight: bold;
+}
+
+button {
+  height: 40px;
+  width: 100px;
+  border-radius: 10px;
+}
+
+.divWrap {
+  height: auto;
+  width: 25%;
+}
+
+.divWrap img {
+  display: block;
+  width: 100%;
+  margin: auto;
+}
+
+.divWrap p {
+  font-size: 30px;
+  text-align: center;
+}
+
+#divParent {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
