--- a/AJAX/jQuery_AJAX/style.css
+++ b/AJAX/jQuery_AJAX/style.css
@@ -1,3 +1,5 @@
+/******* GENERAL SETTINGS *******/
+
 #container {
   width: 70%;
   display: flex;
@@ -5,6 +7,8 @@
   margin: auto;
   align-items: center;
 }
+
+/******** SEARCH BAR ********/
 
 input {
   height: 40px;
@@ -22,6 +26,16 @@ button {
   border-radius: 10px;
 }
 
+/******* DIV with Img and Paragraph ******/
+
+#divParent {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .divWrap {
   height: auto;
   width: 25%;
@@ -36,12 +50,4 @@ button {
 .divWrap p {
   font-size: 30px;
   text-align: center;
-}
-
-#divParent {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
 }
