--- a/BitShow_Project/css/style.css
+++ b/BitShow_Project/css/style.css
@@ -6,7 +6,8 @@
   color: white; }
 
 h1 {
-  text-align: center; }
+  text-align: center;
+  margin: 15px; }
 
 #container {
   width: 70%;
@@ -17,7 +18,9 @@ h1 {
   justify-content: space-around; }
 
 .singleMovieDiv {
-  width: 30%; }
+  width: 30%;
+  border: 1px solid lightgray;
+  margin-bottom: 10px; }
   .singleMovieDiv img {
     width: 100%; }
   .singleMovieDiv a {
@@ -25,5 +28,29 @@ h1 {
     display: block;
     color: blue;
     font-size: 25px; }
+
+ul {
+  list-style-type: none;
+  position: absolute;
+  width: 190px;
+  right: 282px;
+  top: -9px;
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding-inline-start: 0px; }
+  ul li {
+    border-bottom: 1px solid gray;
+    width: 190px;
+    height: 38px;
+    padding-left: 10px;
+    padding-bottom: 2px; }
+    ul li a {
+      text-decoration: none;
+      color: gray;
+      font-size: 12px; }
+
+.dropdown {
+  position: relative; }
 
 /*# sourceMappingURL=style.css.map */
