--- a/BitShow_Project/scss/style.scss
+++ b/BitShow_Project/scss/style.scss
@@ -8,6 +8,7 @@
 }
 h1 {
   text-align: center;
+  margin: 15px;
 }
 #container {
   width: 70%;
@@ -19,6 +20,8 @@ h1 {
 }
 .singleMovieDiv {
   width: 30%;
+  border: 1px solid lightgray;
+  margin-bottom: 10px;
 
   img {
     width: 100%;
@@ -29,4 +32,30 @@ h1 {
     color: blue;
     font-size: 25px;
   }
+}
+   ul {
+    list-style-type: none;
+    position: absolute;
+    width: 190px;
+    right: 282px;
+    top: -9px;
+    background-color: white;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding-inline-start: 0px;
+  li {
+    border-bottom: 1px solid gray;
+    width: 190px;
+    height: 38px;
+    padding-left: 10px;
+    padding-bottom: 2px;
+    a {
+      text-decoration: none;
+      color: gray;
+      font-size: 12px;
+    }
+  }
+}
+.dropdown {
+  position: relative;
 }
