--- a/BitShow_Project/css/style.css
+++ b/BitShow_Project/css/style.css
@@ -53,4 +53,13 @@ ul {
 .dropdown {
   position: relative; }
 
+#footer {
+  color: white;
+  background-color: black;
+  width: 100%;
+  height: 100px;
+  text-align: center; }
+  #footer p {
+    padding-top: 38px; }
+
 /*# sourceMappingURL=style.css.map */
