--- a/Rick_and_Morty/css/styles.css
+++ b/Rick_and_Morty/css/styles.css
@@ -3,8 +3,8 @@
 
 body {
   margin: 0;
-  background-image: url(../img/rick-morty-best.jpg);
-  background-size: cover; }
+  background-size: contain;
+  background-image: url(../img/rick-and-morty-wallpaper-first.png); }
 
 .container {
   width: 60%;
@@ -30,6 +30,9 @@ body {
   background-color: white;
   border-radius: 6px;
   margin-bottom: 25px; }
+  .singleCharacterDiv a {
+    color: darkslategray;
+    font-weight: 500; }
   .singleCharacterDiv img {
     width: 100%;
     border-radius: 6px 6px 0px 0px; }
@@ -46,11 +49,5 @@ ul {
     border-bottom: 1px solid gray;
     display: flex;
     justify-content: space-between; }
-
-.hidden {
-  display: none; }
-
-.active {
-  display: block; }
 
 /*# sourceMappingURL=styles.css.map */
