--- a/Rick_and_Morty/scss/styles.scss
+++ b/Rick_and_Morty/scss/styles.scss
@@ -3,8 +3,9 @@
 }
 body {
     margin: 0;
-    background-image: url(../img/rick-morty-best.jpg);
-    background-size: cover;
+    background-size: contain;
+    background-image: url(../img/rick-and-morty-wallpaper-first.png);
+
 }
 .container {
     width: 60%;
@@ -34,17 +35,22 @@ body {
     background-color: white;
     border-radius: 6px;
     margin-bottom: 25px;
+    a {
+        color: darkslategray;
+        font-weight: 500;
+    }
     img {
         width: 100%;
         border-radius: 6px 6px 0px 0px;
     }
-
 }
+
 .titleDiv {
     height: auto;
     width: 80%;
     margin: 5px 0px;
 }
+
 ul {
     list-style-type: none;
     padding-inline-start: 0px;
@@ -54,9 +60,4 @@ ul {
     justify-content: space-between;
     }
 }
-.hidden {
-    display: none;
-}
-.active {
-    display: block;
-}
+
