Rick and Morty finally done

--- a/Rick_and_Morty/scss/stylesTwo.scss
+++ b/Rick_and_Morty/scss/stylesTwo.scss
@@ -2,7 +2,8 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url(../img/rick-and-morty-wallpaper-first.png);
+    background-image: url(../img/rick-morty-yellow.png);
+    background-position: 0px -71px;
     background-size: cover;
 }
 #container {
@@ -25,7 +26,7 @@ body {
     }
 }
 #table-wrapper {
-    background-color: #a0667e;
+    background-color: #bd2130;
     border-radius: 0px 0px 6px 6px;
 
 }
