--- a/Projects/Project-Web-Design/css/main.css
+++ b/Projects/Project-Web-Design/css/main.css
@@ -1,3 +1,4 @@
+/* GENERAL SETTINGS */
 * {
   box-sizing: border-box; }
 
@@ -70,6 +71,7 @@
   margin: 100px auto;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   text-align: center; }
 
@@ -85,6 +87,7 @@
 .design-flex {
   display: flex;
   flex-direction: column;
+  width: 24%;
   justify-content: space-between;
   align-items: center; }
   .design-flex h5 {
@@ -182,7 +185,7 @@
     color: white;
     text-align: center; }
 
-/* our team */
+/* OUR TEAM */
 .our-team {
   width: 100%; }
 
@@ -210,5 +213,113 @@
   width: 100px;
   height: auto;
   margin-bottom: 20px; }
+
+/* SAY HELLO */
+.say-hello {
+  width: 100%;
+  height: 770px;
+  background-image: url("../img/contact-background.jpg"); }
+
+.sayHello-titleDiv {
+  width: 50%;
+  margin: 0px auto 100px;
+  padding-top: 100px;
+  text-align: center; }
+  .sayHello-titleDiv h5 {
+    font-size: 35px;
+    color: white; }
+  .sayHello-titleDiv span {
+    color: #f7750a; }
+  .sayHello-titleDiv P {
+    color: white; }
+
+.sayHello-form {
+  width: 60%;
+  margin: auto; }
+  .sayHello-form input {
+    width: 48%;
+    height: 50px;
+    border-radius: 8px;
+    padding-left: 16px;
+    margin-bottom: 25px; }
+  .sayHello-form textarea {
+    width: 100%;
+    border-radius: 8px;
+    padding-left: 16px;
+    padding-top: 8px;
+    margin-bottom: 20px; }
+  .sayHello-form button {
+    color: white;
+    border: 1px solid gray;
+    border-radius: 12px;
+    width: 200px;
+    height: 50px;
+    padding: 5px;
+    background-color: #f7750a; }
+    .sayHello-form button button:hover {
+      color: white;
+      cursor: pointer; }
+  .sayHello-form img {
+    display: block;
+    height: fit-content; }
+
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
+/* FOOTER */
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: #434b54;
+  color: white; }
+  footer p {
+    width: 80%;
+    height: 100px;
+    margin: auto;
+    padding-top: 40px;
+    text-align: left; }
+
+/* RESPONSIVE */
+@media screen and (max-width: 1220px) {
+  .team-members {
+    width: 48%;
+    margin-bottom: 50px; }
+
+  .headline h1 {
+    font-size: 60px; }
+  .headline p {
+    font-size: 20px; }
+  .headline button {
+    width: 150px;
+    height: 40px; } }
+@media screen and (max-width: 1040px) {
+  .design-flex {
+    width: 35%; } }
+@media screen and (max-width: 970px) {
+  .headline h1 {
+    font-size: 50px; }
+  .headline p {
+    font-size: 16px; }
+  .headline button {
+    width: 120px; }
+
+  .portfolio img {
+    width: 35%; } }
+@media screen and (max-width: 830px) {
+  .headline h1 {
+    font-size: 40px; }
+  .headline p {
+    font-size: 12px; }
+  .headline button {
+    width: 100px;
+    font-size: 14px; }
+
+  .sayHello-form button {
+    width: 180px;
+    height: 40px; }
+  .sayHello-form img {
+    width: 240px; } }
 
 /*# sourceMappingURL=main.css.map */
